Mise à jour du site

--- a/events.html
+++ b/events.html
@@ -28,7 +28,6 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#">Management</a></li>
                     <li><a href="events.html" class="active">Création d'événement</a></li>
                 </ul>
             </nav>
@@ -39,7 +38,7 @@
         <section class="page-intro">
             <h1>Créer un événement</h1>
             <p class="intro-text">
-                Sur cette page, vous pourrez créer votre propre événement en quelques étapes simples. Veuillez remplir le formulaire ci-dessous avec toutes les informations nécessaires pour permettre aux participants de bien comprendre les détails et le déroulement de votre événement. Nous vous recommandons de nous écrire sur <a href="#" class="link-underline">WhatsApp</a> ou <a href="#" class="link-underline">Messenger</a>.
+                Sur cette page, vous pourrez créer votre propre événement en quelques étapes simples. Veuillez remplir le formulaire ci-dessous avec toutes les informations nécessaires pour permettre aux participants de bien comprendre les détails et le déroulement de votre événement. Nous vous recommandons de nous écrire sur <a href="https://wa.me/33667225452" class="link-underline">WhatsApp</a> ou <a href="mailto:contact@skynium.fr" class="link-underline">Mail</a>.
             </p>
         </section>
 
@@ -48,73 +47,20 @@
             <section class="form-section">
                 <h2 class="form-title">SkyCreator</h2>
                 
-                <form action="#" method="POST">
-                    <div class="form-row three-cols">
-                        <div class="form-group">
-                            <label for="firstname">Prénom *</label>
-                            <input type="text" id="firstname" name="firstname" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="lastname">Nom *</label>
-                            <input type="text" id="lastname" name="lastname" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-mail *</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                    </div>
-
-                    <div class="form-row two-cols-small">
-                        <div class="form-group">
-                            <label for="code">Code *</label>
-                            <select id="code" name="code">
-                                <option value="+33">FR +33</option>
-                                <option value="+32">BE +32</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="phone">Téléphone *</label>
-                            <input type="tel" id="phone" name="phone" placeholder="Téléphone" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="description">Description de l'événement *</label>
-                        <textarea id="description" name="description" rows="10" placeholder="Ici rentrez les informations complémentaires, la description de l'événement, le dress code, la date de fermeture des inscriptions..."></textarea>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="address">Sélectionnez une adresse *</label>
-                        <input type="text" id="address" name="address" placeholder="Sélectionnez une adresse">
-                    </div>
-
-                    <div class="form-row three-cols">
-                        <div class="form-group">
-                            <label for="date">Sélectionnez une date *</label>
-                            <input type="date" id="date" name="date">
-                        </div>
-                        <div class="form-group">
-                            <label for="time">Sélectionnez une heure *</label>
-                            <input type="time" id="time" name="time" value="14:30">
-                        </div>
-                        <div class="form-group">
-                            <label for="event-title">Titre de l'événement *</label>
-                            <input type="text" id="event-title" name="event-title" placeholder="Saisir ici...">
-                        </div>
-                    </div>
-
-                    <p class="form-tips">TIPS : Si vous désirez vous pouvez directement nous contacter via nos moyens de communications (WhatsApp, Messenger, Instagram) pour permettre une meilleure compréhension de votre demande.</p>
-
-                    <button type="submit" class="submit-btn">Envoyer</button>
-                </form>
+                <iframe data-tally-src="https://tally.so/embed/gD9KzN?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="100" frameborder="0" marginheight="0" marginwidth="0" title="Skynium E-Reservation - Événement"></iframe>
+                
+                <script>
+                    var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}
+                </script>
             </section>
 
             <aside class="contact-sidebar">
                 <h3>Contact</h3>
                 <ul class="contact-list">
                     <li><a href="https://wa.me/33667225452">WhatsApp</a></li>
-                    <li><a href="https://instagram.com/skynium">Instagram</a></li>
+                    <li><a href="https://instagram.com/skynium#">Instagram</a></li>
                     <li><a href="https://facebook.com/SkyniumRECONECT">Facebook</a></li>
+                    <li><a href="https://m.me/SkyniumRECONECT">Messenger</a></li>
                     <li><a href="mailto:contact@skynium.fr">E-Mail</a></li>
                     <li><a href="sms:+33667225452">SMS</a></li>
                 </ul>
