--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
     <header>
         <div class="header-container">
             <div class="logo-section">
-                <img src="logo_placeholder.png" alt="Logo Skynium" class="nav-logo">
+                <img src="ressources/icones/web-app-manifest-512x512.png" alt="Logo Skynium" class="nav-logo">
                 <span class="brand-name">Skynium E-Reservation</span>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Accueil</a></li>
-                    <li><a href="#">Management</a></li>
                     <li><a href="events.html">Création d'événement</a></li>
                 </ul>
             </nav>
@@ -47,7 +46,7 @@
         <section class="action-section">
             <h2>Créer votre événement</h2>
             <p class="sub-text">Envie d'ajouter votre événement ? Cliquez sur le bouton ci-dessous et commencez dès maintenant !</p>
-            <a href="#" class="btn-outline">Commencer ></a>
+            <a href="events.html" class="btn-outline">Commencer ></a>
         </section>
 
         <section class="action-section">
@@ -84,7 +83,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>Crée par <a href="#" class="underline">Skynium</a> en 2024.</p>
+            <p>Crée par <a href="https://skynium.fr" class="underline">Skynium</a> en 2024.</p>
         </div>
         
         <div class="footer-line bottom-line"></div>
