Correction de quelques bugs d'UX

--- a/events.html
+++ b/events.html
@@ -22,8 +22,8 @@
     <header>
         <div class="header-container">
             <div class="logo-section">
-                <img src="logo_placeholder.png" alt="Logo Skynium" class="nav-logo">
-                <span class="brand-name">Skynium E-Reservation</span>
+                <img src="ressources/icones/web-app-manifest-512x512.png" alt="Logo Skynium" class="nav-logo">
+                <span class="brand-name"><a href="index.html">Skynium E-Reservation</a></span>
             </div>
             <nav>
                 <ul>
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>Crée par <a href="#" class="underline">Skynium</a> en 2024.</p>
+            <p>Crée par <a href="https://skynium.fr" class="underline">Skynium</a> en 2024.</p>
         </div>
         <div class="footer-line bottom-line"></div>
     </footer>
