--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header-container">
             <div class="logo-section">
                 <img src="ressources/icones/web-app-manifest-512x512.png" alt="Logo Skynium" class="nav-logo">
-                <span class="brand-name">Skynium E-Reservation</span>
+                <span class="brand-name"><a href="index.html">Skynium E-Reservation</a></span>
             </div>
             <nav>
                 <ul>
